EPMRPP-38621: Fix z-index for popups

--- a/app/src/components/filterEntities/entitiesSelector/entitiesSelector.scss
+++ b/app/src/components/filterEntities/entitiesSelector/entitiesSelector.scss
@@ -64,7 +64,7 @@
   background-color: $COLOR--white-two;
   box-sizing: border-box;
   box-shadow: 0 6px 12px $COLOR--gray-80;
-  z-index: 1;
+  z-index: $Z-INDEX-POPUP;
 }
 .entity-item {
   display: block;
