--- a/app/src/components/inputs/inputFilter/inputFilter.scss
+++ b/app/src/components/inputs/inputFilter/inputFilter.scss
@@ -106,7 +106,7 @@
     margin-top: 4px;
     background-color: $COLOR--white-two;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.09);
-    z-index: 2000;
+    z-index: $Z-INDEX-POPUP;
 }
 
 .filters {
