--- a/app/src/components/inputs/inputTagsSearch/inputTagsSearch.scss
+++ b/app/src/components/inputs/inputTagsSearch/inputTagsSearch.scss
@@ -129,7 +129,7 @@
         position: absolute;
         left: 0;
         right: 0;
-        z-index: 10;
+        z-index: $Z-INDEX-POPUP;
         border: 1px solid $COLOR--topaz;
         border-top: none;
       }
